@@ -23,6 +23,7 @@ Fixes
   * TOPParser no longer guesses elements when missing atomic number records
     (Issues #2449, #2651)
   * Testsuite does not any more matplotlib.use('agg') (#2191)
+  * ResidueAttrs now have Atom as a target class by default (#2803)
 
 Enhancements
   * Added the RDKitParser which creates a `core.topology.Topology` object from 
